style(frontend): improve layout resposive styling
- Introduced responsive `--ion-padding` using media queries for
screens with widths of `600px` and `768px` or larger in `variables.css`
- Improved visual spacing and readability in the `PostDetail` view

--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -424,3 +424,17 @@
   font-weight: 100;
   font-style: italic;
 }
+
+/* Media Queries */
+
+@media only screen and (min-width: 600px) {
+  :root {
+    --ion-padding: 24px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  :root {
+    --ion-padding: 32px;
+  }
+}
