feat: update env config and setup deployment
- Added environment-specific `.env.development` and `.env.production`
files
- Modified `package.json` scripts to set `NODE_ENV` for development and
production environments
- Updated `passportConfig.ts` to load environment variables based on
`NODE_ENV`
- Adjusted AuthController to use dynamic redirect URI from environment
variable
- Enhanced server.ts to log environment variables and server URL
- Updated TypeScript target to `es6` for compatibility
- Modified `.gitignore` filesto include environment files for all stages
- Moved fonts to public asset path and updated loading in css
- Configured Vite to use a custom base URL and output directories for
production build

--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -154,6 +154,10 @@
     --color: var(--medium);
   }
 
+  ion-tab-bar {
+    --color: var(--background);
+  }
+
   ion-toggle {
     --track-background-checked: var(--medium);
     --handle-background-checked: var(--secondary);
@@ -173,8 +177,7 @@
 /* Montserrat Thin */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-Thin.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Montserrat/Montserrat-Thin.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
 }
@@ -182,7 +185,7 @@
 /* Montserrat Thin Italic */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-ThinItalic.ttf")
+  src: url("/assets/fonts/Montserrat/Montserrat-ThinItalic.ttf")
     format("truetype");
   font-weight: 100;
   font-style: italic;
@@ -191,7 +194,7 @@
 /* Montserrat ExtraLight */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-ExtraLight.ttf")
+  src: url("/assets/fonts/Montserrat/Montserrat-ExtraLight.ttf")
     format("truetype");
   font-weight: 200;
   font-style: normal;
@@ -200,7 +203,7 @@
 /* Montserrat ExtraLight Italic */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-ExtraLightItalic.ttf")
+  src: url("/assets/fonts/Montserrat/Montserrat-ExtraLightItalic.ttf")
     format("truetype");
   font-weight: 200;
   font-style: italic;
@@ -209,8 +212,7 @@
 /* Montserrat Light */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-Light.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Montserrat/Montserrat-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
@@ -218,7 +220,7 @@
 /* Montserrat Light Italic */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-LightItalic.ttf")
+  src: url("/assets/fonts/Montserrat/Montserrat-LightItalic.ttf")
     format("truetype");
   font-weight: 300;
   font-style: italic;
@@ -227,8 +229,7 @@
 /* Montserrat Regular */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-Regular.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Montserrat/Montserrat-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
@@ -236,8 +237,7 @@
 /* Montserrat Italic */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-Italic.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Montserrat/Montserrat-Italic.ttf") format("truetype");
   font-weight: 400;
   font-style: italic;
 }
@@ -245,8 +245,7 @@
 /* Montserrat Medium */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-Medium.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Montserrat/Montserrat-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
@@ -254,7 +253,7 @@
 /* Montserrat Medium Italic */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-MediumItalic.ttf")
+  src: url("/assets/fonts/Montserrat/Montserrat-MediumItalic.ttf")
     format("truetype");
   font-weight: 500;
   font-style: italic;
@@ -263,7 +262,7 @@
 /* Montserrat SemiBold */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-SemiBold.ttf")
+  src: url("/assets/fonts/Montserrat/Montserrat-SemiBold.ttf")
     format("truetype");
   font-weight: 600;
   font-style: normal;
@@ -272,7 +271,7 @@
 /* Montserrat SemiBold Italic */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-SemiBoldItalic.ttf")
+  src: url("/assets/fonts/Montserrat/Montserrat-SemiBoldItalic.ttf")
     format("truetype");
   font-weight: 600;
   font-style: italic;
@@ -281,8 +280,7 @@
 /* Montserrat Bold */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-Bold.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Montserrat/Montserrat-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
@@ -290,7 +288,7 @@
 /* Montserrat Bold Italic */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-BoldItalic.ttf")
+  src: url("/assets/fonts/Montserrat/Montserrat-BoldItalic.ttf")
     format("truetype");
   font-weight: 700;
   font-style: italic;
@@ -299,7 +297,7 @@
 /* Montserrat ExtraBold */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-ExtraBold.ttf")
+  src: url("/assets/fonts/Montserrat/Montserrat-ExtraBold.ttf")
     format("truetype");
   font-weight: 800;
   font-style: normal;
@@ -308,7 +306,7 @@
 /* Montserrat ExtraBold Italic */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-ExtraBoldItalic.ttf")
+  src: url("/assets/fonts/Montserrat/Montserrat-ExtraBoldItalic.ttf")
     format("truetype");
   font-weight: 800;
   font-style: italic;
@@ -317,8 +315,7 @@
 /* Montserrat Black */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-Black.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Montserrat/Montserrat-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
@@ -326,7 +323,7 @@
 /* Montserrat Black Italic */
 @font-face {
   font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-BlackItalic.ttf")
+  src: url("/assets/fonts/Montserrat/Montserrat-BlackItalic.ttf")
     format("truetype");
   font-weight: 900;
   font-style: italic;
@@ -337,15 +334,14 @@
 /* Black */
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-Black.ttf") format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-BlackItalic.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-BlackItalic.ttf") format("truetype");
   font-weight: 900;
   font-style: italic;
 }
@@ -353,15 +349,14 @@
 /* Bold */
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-Bold.ttf") format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-BoldItalic.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-BoldItalic.ttf") format("truetype");
   font-weight: 700;
   font-style: italic;
 }
@@ -369,14 +364,14 @@
 /* Extra Bold */
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-ExtraBold.ttf") format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-ExtraBold.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-ExtraBoldItalic.ttf")
+  src: url("/assets/fonts/Poppins/Poppins-ExtraBoldItalic.ttf")
     format("truetype");
   font-weight: 800;
   font-style: italic;
@@ -385,15 +380,14 @@
 /* Extra Light */
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-ExtraLight.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-ExtraLight.ttf") format("truetype");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-ExtraLightItalic.ttf")
+  src: url("/assets/fonts/Poppins/Poppins-ExtraLightItalic.ttf")
     format("truetype");
   font-weight: 200;
   font-style: italic;
@@ -402,7 +396,7 @@
 /* Italic */
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-Italic.ttf") format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-Italic.ttf") format("truetype");
   font-weight: 400;
   font-style: italic;
 }
@@ -410,15 +404,14 @@
 /* Light */
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-Light.ttf") format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-LightItalic.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-LightItalic.ttf") format("truetype");
   font-weight: 300;
   font-style: italic;
 }
@@ -426,15 +419,14 @@
 /* Medium */
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-Medium.ttf") format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-MediumItalic.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-MediumItalic.ttf") format("truetype");
   font-weight: 500;
   font-style: italic;
 }
@@ -442,7 +434,7 @@
 /* Regular */
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-Regular.ttf") format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
@@ -450,14 +442,14 @@
 /* Semi Bold */
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-SemiBold.ttf") format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-SemiBoldItalic.ttf")
+  src: url("/assets/fonts/Poppins/Poppins-SemiBoldItalic.ttf")
     format("truetype");
   font-weight: 600;
   font-style: italic;
@@ -466,15 +458,14 @@
 /* Thin */
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-Thin.ttf") format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-Thin.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins";
-  src: url("/src/assets/fonts/Poppins/Poppins-ThinItalic.ttf")
-    format("truetype");
+  src: url("/assets/fonts/Poppins/Poppins-ThinItalic.ttf") format("truetype");
   font-weight: 100;
   font-style: italic;
 }
